# Command-R-Plus

./: CMakeLists.txt  README.md  config.yaml
src/: bot.cpp  bot.h  main.cpp
src/commands/: chat_command.cpp  chat_command.h  ping_command.cpp  ping_command.h
src/logic/: commandr_logic.cpp  commandr_logic.h
src/utils/: config_loader.cpp  config_loader.h
